--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
@@ -106,8 +100,7 @@
                 <target>1.8</target> <!-- yours Java version -->
             </configuration>
         </plugin>
-
     </plugins>
-		<finalName>DespachoService</finalName>
+		<finalName>srpingSecurity</finalName>
 	</build>
 </project>
